refactor: better handle null responses in GitHubClient methods